# signalnoise

./: README.md  pyproject.toml
.virtual_documents/: Untitled.ipynb
src/signalnoise/: __init__.py  core.py
src/signalnoise.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
